# Incremental-Dumps

./: .gitignore  .gitreview  CMakeLists.txt  CollectionHelpers.cpp  CollectionHelpers.h  Dump.cpp  Dump.h  DumpException.cpp  DumpException.h  DumpKind.cpp  DumpKind.h  DumpObject.cpp  DumpObject.h  DumpTraits.h  DumpWriter.h  FetchText.cpp  FetchText.h  FileHeader.cpp  FileHeader.h  Incremental dumps.sln  Incremental dumps.vcxproj  Index.h  Index.hpp  IndexLeafNode.h  IndexLeafNode.hpp  IndexNode.h  IndexNode.hpp  Offset.cpp  Offset.h  Page.h  README  README.md  Revision.h  SevenZip.cpp  SevenZip.h  SpaceManager.cpp  SpaceManager.h  StringHelpers.cpp  StringHelpers.h  TODO.txt  (+17 more)
Diff/: ChangeProcessor.cpp  ChangeProcessor.h  ChangeVisitor.h  DiffReader.cpp  DiffReader.h  DiffWriter.cpp  DiffWriter.h
Diff/Changes/: Change.cpp  Change.h  DeletePageChange.cpp  DeletePageChange.h  DeleteRevisionChange.cpp  DeleteRevisionChange.h  DiffTextGroup.cpp  DiffTextGroup.h  FullDeletePageChange.cpp  FullDeletePageChange.h  NewModelFormatChange.cpp  NewModelFormatChange.h  NewPageChange.cpp  NewPageChange.h  NewRevisionChange.cpp  NewRevisionChange.h  PageChange.cpp  PageChange.h  PartialDeletePageChange.cpp  PartialDeletePageChange.h  RevisionChange.cpp  RevisionChange.h  SiteInfoChange.cpp  SiteInfoChange.h
DumpObjects/: DumpIpV4User.cpp  DumpIpV4User.h  DumpIpV6User.cpp  DumpIpV6User.h  DumpNamedUser.cpp  DumpNamedUser.h  DumpObject.cpp  DumpObject.h  DumpObjectKind.h  DumpPage.cpp  DumpPage.h  DumpRevision.cpp  DumpRevision.h  DumpSiteInfo.cpp  DumpSiteInfo.h  DumpTraits.cpp  DumpTraits.h  DumpUser.cpp  DumpUser.h  FileHeader.cpp  FileHeader.h  Offset.cpp  Offset.h  TextGroup.cpp  TextGroup.h
DumpWriters/: ArticlesWriterWrapper.cpp  ArticlesWriterWrapper.h  CompositeWriter.cpp  CompositeWriter.h  CurrentWriterWrapper.cpp  CurrentWriterWrapper.h  DumpWriter.cpp  DumpWriter.h  IDumpWriter.h  PagesHistoryWriter.cpp  PagesHistoryWriter.h  ProgressWriterWrapper.cpp  ProgressWriterWrapper.h  StubCurrentWriter.cpp  StubCurrentWriter.h  StubHistoryWriter.cpp  StubHistoryWriter.h  TestDumpWriter.cpp  TestDumpWriter.h  WriterWrapper.cpp  WriterWrapper.h
Indexes/: Index.h  Index.tpp  IndexInnerNode.h  IndexInnerNode.tpp  IndexLeafNode.h  IndexLeafNode.tpp  IndexNode.h  IndexNode.tpp
Indexes/Iterators/: IndexInnerIterator.h  IndexInnerIterator.tpp  IndexIterator.h  IndexIterator.tpp  IndexLeafIterator.h  IndexLeafIterator.tpp  IndexNodeIterator.h  IndexNodeIterator.tpp
LZMA/CPP/7zip/Bundles/LzmaCon/: LzmaAlone.cpp  LzmaCon.sln  LzmaCon.vcxproj  makefile.gcc
LZMA/CPP/7zip/Common/: WrapperStreams.cpp  WrapperStreams.h
Objects/: IpV4User.cpp  IpV4User.h  IpV6User.cpp  IpV6User.h  NamedUser.cpp  NamedUser.h  Page.cpp  Page.h  Revision.cpp  Revision.h  SiteInfo.h  Timestamp.cpp  Timestamp.h  User.cpp  User.h
XML/: LICENSE.txt  README.txt  xmlfile.cpp  xmlfile.h  xmlfile_c.c  xmlinput.cpp  xmlinput_c.c  xmlinputp.h  xmloutput.cpp  xmloutput.h
XmlInput/: StandardInputStream.h  WrapperInputStream.h  XmlContributorProcessor.cpp  XmlContributorProcessor.h  XmlMediawikiProcessor.cpp  XmlMediawikiProcessor.h  XmlNamespacesProcessor.cpp  XmlNamespacesProcessor.h  XmlPageProcessor.cpp  XmlPageProcessor.h  XmlRevisionProcessor.cpp  XmlRevisionProcessor.h  XmlSiteInfoProcessor.cpp  XmlSiteInfoProcessor.h
libexecstream/: exec-stream.cpp
libexecstream/posix/: exec-stream-helpers.cpp  exec-stream-helpers.h
libexecstream/win/: exec-stream-helpers.cpp  exec-stream-helpers.h
